Jinja and custom apps

--- a/django101/django_template/templates/django_template/101.html
+++ b/django101/django_template/templates/django_template/101.html
@@ -1,9 +1,9 @@
 {% extends "layout.html" %}
 
 {% block title %}
-Home
+Template 101
 {% endblock %}
 
 {% block content %}
-<h1>Hello World Custom!</h1>
+<h1>Template 101</h1>
 {% endblock %}
