--- a/django101/templates/index.html
+++ b/django101/templates/index.html
@@ -5,5 +5,5 @@ Home
 {% endblock %}
 
 {% block content %}
-<h1>Hello World Custom!</h1>
+<h1 class="text-3xl font-bold text-blue-700">Hello World Custom!</h1>
 {% endblock %}
